2010-04-12	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Bugs fixed:
	  #1500917 --disable-mt32emu doesn't disable building mt32emu
	  #2986215 SI: graphics glitch on "you must start a new game first."
	* configure.ac, audio/midi_drivers/Makefile.am: Bugfix for #1500917.
	* configure.ac, Makefile.am, content/*/*: The Exult mods can now be enabled
	  and built by passing the '--enable-mods' to ./configure; the mods are
	  installed to the default 'forgeofvirtue' and 'silverseed' mods dirs.
	  There are also MinGW makefiles for each of the mods as well. All of the
	  mod makefiles are generated by the content/makefile_builder.sh script;
	  since this script is probably non-portable, the generated output makefiles
	  have been included in the SVN dir for the time being.
	* Makefile.am: Do not link with libmt32emu.la if it is not built.
	* shapeid.cc, shapes/data_utils.h: Fixed crash on Mac OS X bundles if there
	  was no exult_bg.flx or exult_si.flx in external data directory.
	* configure.ac: Cleaning up tests for libogg, libvorbis, libvorbisfile,
	  libglade and libgnomeui. Changed AC_ARG_* to use AS_HELP_STRING. Fixed the
	  default case for --enable-long-long-warnings. Static builds in Mac OS X
	  now work by passing the following arguments to ./configure:
	    --enable-static-libraries
	    --with-macosx-static-lib-path=path/to/static/libs
	* Merged Colourless' No-SDL Mixer back to trunk.

2010-03-18	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* mapedit/npcedit.cc: Fixed another instance of assuming longs are 32-bit.
	* keyactions.cc: Fixed bug with 'try all keys' action.

2010-03-16	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Exult Studio: Eliminated a few warnings in Prompt window. Some buttons are
	  now the appropriate stock buttons. Commented out gtk_selection_owner_set
	  calls, which were preventing drag-drop from working more than once in ES
	  in X.

2010-03-15	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bugs: